<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/editDegree">

        <com.example.bathust.showpolygon.CustomView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customView"
            app:strokeWidth="18"
            app:edgeColor="@color/black"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <Button
        android:background="@drawable/shape"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/createBtn"
        android:layout_alignBottom="@+id/editEdge"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:background="@color/black"
        android:scaleType="fitXY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtn"
        android:layout_below="@+id/editScale"
        android:layout_above="@+id/createBtn"
        android:layout_alignEnd="@+id/editDegree"
        android:layout_toEndOf="@+id/textView" />

    <EditText
        android:gravity="center"
        android:inputType="number"
        android:digits="1234567890"
        android:hint="@string/degree"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editDegree"
        android:layout_above="@+id/createBtn"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="146dp" />

    <EditText
        android:gravity="center"
        android:hint="@string/scale"
        android:digits="1234567890."
        android:maxLength="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editScale"
        android:inputType="number"
        android:layout_alignTop="@+id/editDegree"
        android:layout_alignParentStart="true" />

    <ToggleButton
        android:background="@drawable/shape"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tglBtn"
        android:textOn="@string/color"
        android:textOff="@string/picture"
        android:layout_below="@+id/editDegree"
        android:layout_toStartOf="@+id/createBtn" />


    <EditText
        android:inputType="number"
        android:digits="3456789"
        android:maxLength="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editEdge"
        android:hint="@string/edgeRequire"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/tglBtn" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectText"
        android:id="@+id/textView"
        android:ems="1"
        android:layout_alignBottom="@+id/imgBtn"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/imgBtn" />

</RelativeLayout>
